# basketball-scraper

./: acb.py  blg.py  bnxt.py  bsl.py  cancis.py  cbffe.py  ecbbl.py  euroleauge_eurocup.py  fiba.py  flask_app.py  fpb.py  italy.py  kos.py  kzs.py  library.py  naia.py  nba_ncaa_g.py  nbl.py  ncaa.py  plk.py  pyproject.toml  rgm.py  sbf.py  scraper_overview.xlsx  serbia.py  spain.py  vtb.py
templates/: dashboard.html  documentation.html  pdf.html
