[project]
name = "basketball-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Bit"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "feedparser (>=6.0.11,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
